# stonks-alerts

./: .gitignore  Cargo.toml  README.md
src/: listener.rs  main.rs  settings.rs  state.rs
