[package]
name = "stonks-alerts"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bincode = "1.3"
config = { version = "0.11", features = ["toml"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
either = "1.6"
hex = "0.4"
rdkafka = { version = "0.26", features = ["sasl", "ssl"] }
rdkafka-sys = { version = "4.0.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
teloxide = { version = "0.5", features = ["macros"] }
log = { version = "0.4", features = ["std", "serde"] }
